add pip install

--- a/Building Systems with the ChatGPT API/L1_student.ipynb
+++ b/Building Systems with the ChatGPT API/L1_student.ipynb
@@ -20,6 +20,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8b9b7e3b",
+   "metadata": {
+    "height": 64
+   },
+   "outputs": [],
+   "source": [
+    "# !pip install openai\n",
+    "# !pip install tiktoken\n",
+    "# !pip install python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "19cd4e96",
    "metadata": {
